--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -16,7 +16,7 @@ development:
   database: rease_development
   pool: 5
   username: root
-  password: 123qwe
+  password: 123qwe123qwe
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
