--- a/app/config/database.yml
+++ b/app/config/database.yml
@@ -16,7 +16,7 @@ development:
   database: rease_development
   pool: 5
   username: root
-  password: pacitax2
+  password: kvhipj23
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
