Database for production stage

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,9 +23,16 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-production:
+staging:
   <<: *default
   database: rease_staging
+  pool: 5
+  username: root
+  password: 123qwe
+
+production:
+  <<: *default
+  database: rease_production
   pool: 5
   username: root
   password: 123qwe
