--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ test:
 
 production:
   <<: *default
-  database: rease_staging
+  database: rease_production
   pool: 5
   username: root
   password: 123qwe123qwe
